<resources>
    <string name="app_name">FinalProject</string>
    <string name="option">Options</string>
    <string name="option_one">Option one</string>
    <string name="option_two">Option Two</string>
    <string name="option_three">Option Three</string>
    <string name="option_four">Option Four</string>
    <string name="half_options">50/50</string>
    <string name="flip_question">Flip Question</string>
    <string name="question">The question goes here</string>
    <string name="title_score_view">Your Score</string>
    <string name="replay">Replay</string>
    <string name="high_scores">High Scores</string>
    <string name="main_screen">Main Screen</string>
    <string name="preferences">Preferences</string>
    <string name="preference_username">User Name</string>
    <string name="preference_username_title">Username</string>
    <string name="preference_username_summary">Use this is update or create username</string>
    <string name="title_high_score">High Score</string>
    <string name="preference_main_bg">Main Bg</string>
    <string name="preference_main_bg_title">Change Bg Color</string>
    <string name="preference_main_bg_title_summary">Use this to change background color</string>
    <string name="title_app">The Mind Fix</string>
</resources>