<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_game"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/anton"
            android:text="@string/title_app"
            android:textColor="#E91E63"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            app:contentPadding="4dp"
            app:cardBackgroundColor="#FFC107"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"


            >

            <TextView
                android:id="@+id/question"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="left"
                android:text="@string/question"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:text="@string/half_options"
                android:id="@+id/half_options"
                android:background="@drawable/button_50"
                android:layout_margin="6dp"
                app:backgroundTint="#FFFFFF"
                app:backgroundTintMode="multiply"
                android:textAllCaps="false"

                />
            <Button
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:text="@string/flip_question"
                android:id="@+id/flip_question"
                android:background="@drawable/button_flip"
                android:layout_margin="6dp"
                app:backgroundTint="#FFFFFF"
                app:backgroundTintMode="multiply"
                android:textAllCaps="false"


                />
        </LinearLayout>


        <Button
            android:id="@+id/button_option_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:background="@drawable/button_option_one"
            android:text="@string/option_one"
            android:layout_margin="10dp"
            android:layout_marginTop="0dp"
            app:backgroundTint="#FFFFFF"
            app:backgroundTintMode="multiply"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_option_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_option_one"
            android:text="@string/option_two"
            android:layout_margin="10dp"
            app:backgroundTint="#FFFFFF"
            app:backgroundTintMode="multiply"
            android:textAllCaps="false"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_option_3"
            android:background="@drawable/button_option_one"
            android:text="@string/option_three"
            android:layout_margin="10dp"
            app:backgroundTint="#FFFFFF"
            android:textAllCaps="false"
            app:backgroundTintMode="multiply"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_option_4"
            android:background="@drawable/button_option_one"
            android:text="@string/option_four"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            app:backgroundTint="#FFFFFF"
            app:backgroundTintMode="multiply"/>

    </LinearLayout>

</ScrollView>